--- a/src/pages/category/[category].astro
+++ b/src/pages/category/[category].astro
@@ -40,7 +40,7 @@ const categoryLabel = categorySafe
       ) : (
         posts.map((post) => (
           <div style="margin-bottom:2rem;">
-            <a href={`/blog/${post.slug}`} style="font-size:1.2rem;color:#111;text-decoration:none;">
+            <a href={`/blog/${post.id}`} style="font-size:1.2rem;color:#111;text-decoration:none;">
               {post.data.title}
             </a>
             <p style="color:#666;">{post.data.description}</p>
