--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -69,7 +69,7 @@ const posts = (await getCollection('blog')).sort(
 			ul li a:hover .title { text-decoration: underline; }
 			ul li a:hover .date { color: rgba(var(--gray-dark), 0.75); }
 			/* Style preview images: soft corners, no shadows, shallow height like editorial sites */
-			ul li img {
+			img.image.image--cover {
 				display: block;
 				width: 100%;
 				max-height: 180px;
@@ -97,7 +97,7 @@ const posts = (await getCollection('blog')).sort(
 							<li>
 								<a href={`/blog/${post.id}/`}>
 									{post.data.heroImage && (
-										<Image width={720} height={360} src={post.data.heroImage} alt="" />
+										<Image class="image image--cover" width={720} height={360} src={post.data.heroImage} alt="" />
 									)}
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
