--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -59,7 +59,7 @@ const posts = (await getCollection('blog'))
 				font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
 				font-weight: 600;
 				font-size: 1.05rem;
-				color: var(--text);
+				color: var(--text-85);
 				line-height: 1.15;
 			}
 			.date {
